[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aiohttp_poe"
version = "0.0.10"
authors = [
  { name="Jelle Zijlstra", email="jelle@quora.com" },
]
description = "A demonstration of the Poe protocol using aiohttp"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiohttp",
    "aiohttp-sse",
    "typing-extensions",
]

[project.urls]
"Homepage" = "https://github.com/quora/poe-protocol"

[tool.pyright]
pythonVersion = "3.7"
