[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain_poe"
version = "0.0.13"
authors = [
  { name="Jelle Zijlstra", email="jelle@quora.com" },
]
description = "A demonstration of a Poe bot built using LangChain"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi_poe",
    "langchain",
    "openai",
]

[project.urls]
"Homepage" = "https://github.com/quora/poe-protocol"

[tool.pyright]
pythonVersion = "3.7"
