[tool.poetry]
name = "llama_poe"
version = "0.1.0"
description = ""
authors = ["LlamaIndex Inc."]
license = "MIT"
readme = "README.md"
packages = [{include = "poe_api"}]

[tool.poetry.scripts]
start = "poe_api.server:start"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
llama_index = "^0.5.15"
openai = "^0.27.3"
black = "^23.3.0"
isort = "^5.12.0"
fastapi = "^0.95.1"
sse-starlette = "^1.3.3"
typing-extensions = "^4.5.0"
uvicorn = "^0.21.1"
fastapi-poe = "^0.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
