[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simulator_poe"
version = "0.0.1"
authors = [
  { name="Lida Li", email="lli@quora.com" },
]
description = "A simulator to test Poe bot "
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiohttp-sse-client2",
    "fastapi",
    "prompt_toolkit",
    "pydantic",
    "typing-extensions",
]

[project.urls]
"Homepage" = "https://github.com/quora/poe-protocol"

[tool.pyright]
pythonVersion = "3.7"